[package]
name = "reviver-macros"
version = "0.1.0"
authors = ["ethgallucci <ethgallucci@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "reviver_macros"
path = "src/shared.rs"
crate-type = ["lib"]

[dependencies]
